<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.halo_sf.android.halo_notes.ui.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.halo_sf.android.halo_notes.ui.TrashFragment"
        android:label="@string/menu_trash"
        tools:layout="@layout/fragment_trash" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.halo_sf.android.halo_notes.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>