<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/tv_title_hint_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:hint="@string/et_title_and_note_hint"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_hint"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_note_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/tv_note_hint_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />

    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:hint="@string/et_title_and_note_hint"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_hint" />

    <Button
        android:id="@+id/btn_cancel"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:minWidth="0dp"
        android:padding="4dp"
        android:text="@string/btn_cancel_text"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
        app:layout_constraintTop_toBottomOf="@+id/et_note" />

    <Button
        android:id="@+id/btn_ok"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:padding="4dp"
        android:text="@string/btn_ok_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>