<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_menu_action_mode_fragment_notes"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/backgroundColor"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/ib_clear_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_outline_clear_32"
            app:tint="?attr/colorOnPrimary"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_select_all"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:minWidth="64dp"
            android:minHeight="0dp"
            android:text="@string/btn_select_all_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ib_clear"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/ib_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/ib_delete_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ib_clear"
            app:srcCompat="@drawable/ic_outline_delete_32"
            app:tint="?attr/colorOnPrimary"
            tools:ignore="TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />

        <ImageButton
            android:id="@+id/ib_delete_forever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:contentDescription="@string/ib_delete_forever_content_description"
            app:layout_constraintEnd_toStartOf="@+id/ib_delete"
            app:layout_constraintTop_toTopOf="@+id/ib_clear"
            app:srcCompat="@drawable/ic_outline_delete_forever_32"
            app:tint="?attr/colorOnPrimary"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/ib_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:contentDescription="@string/ib_share_content_description"
            app:layout_constraintEnd_toStartOf="@+id/ib_delete_forever"
            app:layout_constraintTop_toTopOf="@+id/ib_clear"
            app:srcCompat="@drawable/ic_outline_share_32"
            app:tint="?attr/colorOnPrimary"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/ib_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:contentDescription="@string/ib_search_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_shadow"
        app:srcCompat="@drawable/ic_outline_search_32"
        app:tint="?attr/colorOnPrimary"
        tools:ignore="TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:clipToPadding="false"
        android:paddingBottom="168dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_shadow" />

    <TextView
        android:id="@+id/tv_no_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/tv_no_notes_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recycler_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/fab_add_content_description"
        app:fabCustomSize="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_outline_add_24" />
</androidx.constraintlayout.widget.ConstraintLayout>