<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_color_tag_outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/iv_or_ib_color_tag_outline_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_outline_brightness_1_40"
        app:tint="?attr/colorOnPrimary" />

    <ImageView
        android:id="@+id/iv_color_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_color_tag_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/iv_color_tag_outline"
        app:layout_constraintEnd_toEndOf="@+id/iv_color_tag_outline"
        app:layout_constraintStart_toStartOf="@+id/iv_color_tag_outline"
        app:layout_constraintTop_toTopOf="@+id/iv_color_tag_outline"
        app:srcCompat="@drawable/ic_baseline_brightness_1_24"
        app:tint="@color/transparent" />

    <LinearLayout
        android:id="@+id/tvs_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_color_tag_outline"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_created_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_created_hint_text" />

        <TextView
            android:id="@+id/tv_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tvs_created_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvs_edited"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_color_tag_outline"
        app:layout_constraintTop_toTopOf="@+id/tvs_created">

        <TextView
            android:id="@+id/tv_created_hint_hidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_created_hint_text" />

        <TextView
            android:id="@+id/tv_created_hidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tvs_edited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tvs_above"
        app:layout_constraintEnd_toEndOf="@+id/tvs_created"
        app:layout_constraintTop_toBottomOf="@+id/tvs_created">

        <TextView
            android:id="@+id/tv_edited_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_edited_hint_text" />

        <TextView
            android:id="@+id/tv_edited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@null"
        android:contentDescription="@string/chooserTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_outline_share_40"
        app:tint="?attr/colorOnPrimary"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/tvs_above"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_color_tag_outline">

        <TextView
            android:id="@+id/tv_above_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_hint_text"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/iv_color_tag_outline" />

        <TextView
            android:id="@+id/tv_above"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:inputType="textMultiLine"
            android:textColor="?attr/itemTextColor"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tvs_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvs_above">

        <TextView
            android:id="@+id/tv_below_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_note_hint_text"
            android:textColor="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/tv_below"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:inputType="textMultiLine"
            android:textColor="?attr/itemTextColor"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>