<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:id="@+id/tvs_above"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/tvs_below"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_above_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_created_hint_text" />

            <TextView
                android:id="@+id/tv_above"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvs_below"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvs_above">

            <TextView
                android:id="@+id/tv_below_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_edited_hint_text" />

            <TextView
                android:id="@+id/tv_below"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/ib_color_tag_outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:contentDescription="@string/iv_or_ib_color_tag_outline_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvs_below"
            app:srcCompat="@drawable/ic_outline_brightness_1_40"
            app:tint="?attr/colorOnPrimary"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/iv_color_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/iv_color_tag_content_description"
            app:layout_constraintBottom_toBottomOf="@+id/ib_color_tag_outline"
            app:layout_constraintEnd_toEndOf="@+id/ib_color_tag_outline"
            app:layout_constraintStart_toStartOf="@+id/ib_color_tag_outline"
            app:layout_constraintTop_toTopOf="@+id/ib_color_tag_outline"
            app:srcCompat="@drawable/ic_baseline_brightness_1_24"
            app:tint="@color/transparent" />

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            app:layout_constraintEnd_toStartOf="@+id/ib_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ib_color_tag_outline">

            <include
                android:id="@+id/color_tags"
                layout="@layout/color_tags" />
        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/ib_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/ib_delete_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ib_color_tag_outline"
            app:srcCompat="@drawable/ic_outline_delete_40"
            app:tint="?attr/colorOnPrimary"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/lay_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_color_tag_outline">

            <include
                android:id="@+id/frame"
                layout="@layout/frame_dialog_taking_or_editing_a_note"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_restore"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="56dp"
            android:padding="4dp"
            android:text="@string/btn_restore_text"
            android:textColor="?attr/itemTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>