<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="?attr/colorPrimary"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recycler_view_background"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/layout_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/frame"
                layout="@layout/frame_rv_row" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/ib_delete_forever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/ib_delete_forever_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_outline_delete_forever_40"
            app:tint="?attr/colorOnPrimary"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/tvs_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_frame">

            <TextView
                android:id="@+id/tv_delete_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_delete_hint_text" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_restore"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="64dp"
            android:minHeight="0dp"
            android:padding="4dp"
            android:text="@string/btn_restore_text"
            android:textColor="?attr/itemTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_frame"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>